--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,11 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0;
-  padding: 2rem;
-  text-align: center;
-  box-sizing: border-box;
-}
-
 body {
   font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -26,6 +18,7 @@ li {
 }
 
 .container {
+  min-height: 100vh;
   margin: 20px;
   display: flex;
   flex-direction: column;
