--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,7 +19,8 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  /* color: #535bf2; */
+  color: black;
 }
 
 body {
@@ -37,12 +38,12 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: lightgrey;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -73,6 +74,13 @@ body {
   line-height: 1.5;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  width: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -92,9 +100,4 @@ ol {
 img {
   display: block;
   max-width: 100%;
-}
-#root {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
