--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,8 +1,13 @@
 .container {
   min-height: calc(100vh - 50px);
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 12px;
+  /* width: 100%; */
+}
+
+.title {
+  font-weight: 500;
+  font-size: 48;
+  text-align: center;
 }
